@@ -1,0 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+
+    <!-- Configuration -->
+        <CommandClass id="112">
+                <Value type="byte" genre="config" instance="1" index="1" label="LED behavior" min="0" max="1" value="0">
+                        <Help>
+                                0 -> night light - LED ON when the load attached is turned OFF (default).
+                                1 -> on indicator - LED ON when the load attached is turned ON.
+                        </Help>
+                </Value>
+        </CommandClass>
+</Product>
